# calver

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
src/calver/: commands.py  integration.py
tests/: conftest.py  test_integration.py
